# loud-typing

./: Cargo.toml
src/: main.rs  player.rs
